[package]
name = "rustchain"
version = "0.1.0"
edition = "2021"

[dependencies]

# serialization
serde = "1.0.219"
serde_derive = "1.0.219"
bincode = { version = "2.0.1", features = ["serde"] }

# #crypto
ed25519-dalek = {version = "2.1.1", features = ["serde"]}
sha2 = "0.10.9"
rand = "0.8.5"
hex = "0.4.3"

# networking
libp2p = { version = "0.55", features = [
    "tokio",       # Crucial for Tokio integration across libp2p components
    "macros",      # For #[derive(NetworkBehaviour)]
    "gossipsub",
    "yamux",
    "noise",
    # "dns",         # Temporarily disabled due to hickory-resolver feature issues
    "tcp",         # TCP transport
    "mdns"         # mDNS for peer discovery
] }


# hickory-resolver = { version = "0.25.2", features = ["tokio-runtime", "tokio"] }

# async runtime
tokio = { version = "1.45.0", features = ["full"] }

# command line 
clap = { version = "4.5.38", features = ["derive"] }

# config parsing 
config = "0.15.11"

# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

# error handling
anyhow = "1.0.86"
thiserror = "1.0.63"

# testing & dev 
proptest = "1.6.0"

# storage 
# rocksdb = "0.23.0"

[dev-dependencies]
tempfile = "3.10.1"