[package]
name = "rustchain"
version = "0.1.0"
edition = "2021"

[dependencies]

# serialization
serde = { version = "1.0.198", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0"
toml = "0.8"
bincode = "2.0.0-rc.3"

# #crypto
ed25519-dalek = { version = "2.1.0", features = ["serde"] }
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"

# networking
libp2p = { version = "0.55", features = [
    "tokio",       # Crucial for Tokio integration across libp2p components
    "macros",      # For #[derive(NetworkBehaviour)]
    "gossipsub",
    "yamux",
    "noise",
    # "dns",         # Temporarily disabled due to hickory-resolver feature issues
    "tcp",         # TCP transport
    "mdns",        # mDNS for peer discovery
    "request-response"  # For sync protocol
] }


# hickory-resolver = { version = "0.25.2", features = ["tokio-runtime", "tokio"] }

# async runtime
tokio = { version = "1.45.0", features = ["full"] }

# command line 
clap = { version = "4.5.38", features = ["derive"] }

# config parsing 
config = "0.15.11"

# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

# error handling
anyhow = "1.0.82"
thiserror = "1.0.59"

# testing & dev 
proptest = "1.6.0"

# storage 
rocksdb = "0.22.0"

[dev-dependencies]
tempfile = "3.10.1"

[[bin]]
name = "create_validator_key"
path = "src/bin/create_validator_key.rs"

[[bin]]
name = "debug_validator_key"
path = "src/bin/debug_validator_key.rs"

[[bin]]
name = "debug_genesis"
path = "src/bin/debug_genesis.rs"

[[bin]]
name = "debug_full_genesis"
path = "src/bin/debug_full_genesis.rs"

[[bin]]
name = "debug_toml"
path = "src/bin/debug_toml.rs"

[[bin]]
name = "debug_genesis_parsing"
path = "src/bin/debug_genesis_parsing.rs"